--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,14 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 	<Title>Hunger Pang</Title>
+    {% load static %}
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet">
 
 <head>
 
-{% include "navbar.html" %}	
-	<link rel="stylesheet" href = "{% static 'mainstyle.css' %}">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-
+{% include "navbar.html" %}	    
 	<style>
 	</style>
 
@@ -16,11 +16,11 @@
 	</head>
 
 	<body>
-    <script type="text/javascript" src={% static 'cart.js' %}></script>
-	
 	<div>{% block content %}
 	replace me
 	</div>{% endblock %}
+    <script type="text/javascript" src={% static 'cart.js' %}></script>
+    <script type="text/javascript" src={% static 'app.js' %}></script>
 	</body>
 
 </html>
