--- a/templates/index.html
+++ b/templates/index.html
@@ -4,15 +4,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Auth0 Example</title>
+    <title>Home</title>
   </head>
   <body>
-    {% if session %}
-    <h1>Welcome {{session.userinfo.name}}!</h1>
+    {% if user.is_authenticated %}
+    <h1>Welcome {{user.username}}!</h1>
     <p><a href="{% url 'logout' %}">Logout</a></p>
     {% else %}
     <h1>Welcome Guest</h1>
-    <p><a href="{% url 'login' %}">Login</a></p>
+    <p>Please register or login to get started</p>
+    <button type="button" class="btn btn-secondary" href="{% url 'register' %}">Register</button>
+    <button type="button" class="btn btn-secondary" href="{% url 'login' %}">Login</button>
     {% endif %}
   </body>
 </html>
