--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,9 +7,12 @@
       <a class="nav-link" href="{% url 'index' %}">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Menu</a>
+      <a class="nav-link" href="{% url 'order_starters' %}">Menu</a>
     </li>
     <li class="nav-item">
       <a class="nav-link">Profile</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'cart' %}">🛒</a>
     </li>
   </ul>
