--- a/templates/order.html
+++ b/templates/order.html
@@ -13,4 +13,22 @@
 </input>
 </div>
 
+<!-- https://forum.djangoproject.com/t/saving-multiple-models-from-one-form-in-django/2615 -->
+<div class="card-body"> 
+	<div class="row">
+		<div class="col-md-6 offset-3 ">
+ <form class="" action="" method="post">
+	  {% csrf_token %}
+		 <div class="row">
+	 <div class="form-group col-md-8 ">
+	 {{order_form.order_items | as_crispy_field}}
+		 </div>
+	 <div class="form-group">
+	   <button type="submit" class="btn btn-primary btn-block btn-sm" >Submit</button>
+	   </div>
+ </form>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
