--- a/templates/active_order_exists.html
+++ b/templates/active_order_exists.html
@@ -7,7 +7,9 @@
 {% csrf_token %}
 <H1>Oops!</H1>
 
+<div class="container-fluid">
+
 <p>Looks like you already have an active order!</p>
 <p>If you would like to make any changes to your current order, please call or email the restaurant.</p>
-
+</div>
 {% endblock %}
