--- a/templates/contact_us.html
+++ b/templates/contact_us.html
@@ -5,9 +5,12 @@
 
 {% block content %}
 {% csrf_token %}
+<div class="container-fluid">
+
 <H1>Contact Us</H1>
 
 <p>We at Le Restaurant are happy to help you with any further information you may need!</p>
 <p>Please feel free to email us at enquiries@lerestaurant.com or call us at 00000000000 with any enquiries!</p>
+</div>
 
 {% endblock %}
