--- a/templates/order.html
+++ b/templates/order.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <div class="container-fluid">
+
+<div class="container-fluid">
 <h1>Order</h1>
 </div>
 <div class="mb-3"> 
@@ -12,5 +14,5 @@
 	{% crispy order_form %}
 </div>
 </div>
-
+</div>
 {% endblock %}
