--- a/templates/booking_requested.html
+++ b/templates/booking_requested.html
@@ -5,9 +5,12 @@
 
 {% block content %}
 {% csrf_token %}
+<div class="container-fluid">
+
 <H1>Booking Requested</H1>
 
 <p>Thank you for requesting to book a table!</p>
 <p>We will contact you via your registered email to confirm your booking</p>
+</div>
 
 {% endblock %}
