--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <body>
     {% if user.is_authenticated %}
     <div class="container-fluid">
+    <div class="container-fluid">
       <h1>Welcome {{user.username}}!</h1>
     </div>
   <div class="container-fluid">
@@ -16,7 +17,9 @@
     <a type="button" href="{% url 'logout' %}" class="btn btn-secondary">Logout</a>
   </div>
   </div>
+  </div>
     {% else %}
+    <div class="container-fluid">
     <div class="container-fluid">
 
     <h1>Welcome Guest</h1>
@@ -25,6 +28,7 @@
     <p>Please register or login to get started</p>
     <a class="btn btn-secondary" href="{% url 'register' %}">Register</a>
     <a class="btn btn-secondary" href="{% url 'login' %}">Login</a>
+    </div>
     </div>
     {% endif %}
   </body>
