--- a/templates/registration/change_password.html
+++ b/templates/registration/change_password.html
@@ -4,6 +4,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<div class="container-fluid">
 <h1>Change Password</h1>
 <div class="container-fluid">
 <form method="post" class="mb-3">
@@ -12,5 +13,6 @@
 </div>
   <button type="submit" class="btn btn-secondary">Save</button>
 </form>
+</div>
 
 {% endblock %}
