--- a/templates/registration/edit_profile.html
+++ b/templates/registration/edit_profile.html
@@ -4,10 +4,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<div class="container-fluid">
+
 <h1>Edit Profile</h1>
 <form method="post" class="mb-3">
   {% csrf_token %}
   {{ form |crispy }}
   <button type="submit" class="btn btn-secondary">Save</button>
 </form>
+<div class="container-fluid">
 {% endblock %}
