--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -4,10 +4,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<div class="container-fluid">
+
 <h1>Sign Up</h1>
     <form method="POST" class="form-group">
 	{% csrf_token %}
 	{{ register_form|crispy}}
 	<button type="submit" class="btn btn-success">Register</button>
     </form>
+</div>
 {% endblock %}
