--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -72,8 +72,12 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'booking'%}">Book a Table</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'login'%}">Login</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Account</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+              <a class="dropdown-item" href="{% url 'login' %}">Log In</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'contact-us'%}">Contact Us</a>
